--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "squizlabs/php_codesniffer": "^4.0"
+        "squizlabs/php_codesniffer": "^4.0",
+        "phpstan/phpstan": "^2.1"
     },
     "autoload": {
         "psr-4": {
